# opengl3GPGPU

./: CMakeLists.txt  README.md
include/: glGPGPU.h
include/glew/src/: glew.c
src/: example.cpp
